--- a/app/src/main/res/layout/item_password_overview.xml
+++ b/app/src/main/res/layout/item_password_overview.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tv_account_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="TextView"
@@ -15,11 +15,11 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tv_account_user"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_account_name" />
 </androidx.constraintlayout.widget.ConstraintLayout>
