[LS-030] refactor resources (text, view xmls)  [BJ, RT]

--- a/app/src/main/res/layout/activity_startup.xml
+++ b/app/src/main/res/layout/activity_startup.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="168dp"
         android:autofillHints=""
         android:ems="10"
-        android:hint="@string/choose_username"
+        android:hint="@string/registration_choose_username"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
@@ -26,7 +26,7 @@
         android:layout_marginTop="4dp"
         android:autofillHints=""
         android:ems="10"
-        android:hint="@string/choose_password"
+        android:hint="@string/registration_choose_pwd"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
@@ -37,9 +37,9 @@
         android:id="@+id/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:autofillHints="@string/enter_your_email"
+        android:autofillHints="@string/registration_enter_email"
         android:ems="10"
-        android:hint="@string/enter_your_email"
+        android:hint="@string/registration_enter_email"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
