--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:title="@string/setLanguage"
+        android:title="@string/language_set_text"
         android:id="@+id/changeLanguage"
         app:showAsAction="never"
         />
