[LS-030] refactor code to adhere to codingstandard  [BJ, RT]

--- a/app/src/main/res/layout/item_password_overview.xml
+++ b/app/src/main/res/layout/item_password_overview.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/tv_account_name"
+        android:id="@+id/tvAccountName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/pwd_overview_text"
@@ -15,11 +15,11 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tv_account_user"
+        android:id="@+id/tvAccountUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/pwd_overview_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_account_name" />
+        app:layout_constraintTop_toBottomOf="@+id/tvAccountName" />
 </androidx.constraintlayout.widget.ConstraintLayout>
