--- a/app/src/main/res/layout/activity_create_vault_entry.xml
+++ b/app/src/main/res/layout/activity_create_vault_entry.xml
@@ -86,12 +86,13 @@
         android:id="@+id/btnVaultSave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
+        android:layout_marginStart="36dp"
         android:layout_marginBottom="120dp"
         android:text="@string/vault_save"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password_toggle" />
+        app:layout_constraintTop_toBottomOf="@+id/password_toggle"
+        app:layout_constraintVertical_bias="0.376" />
 
     <Button
         android:id="@+id/btnVaultCancel"
@@ -101,15 +102,15 @@
         android:text="@string/cancel"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.709"
+        app:layout_constraintHorizontal_bias="0.798"
         app:layout_constraintStart_toEndOf="@+id/btnVaultSave"
-        app:layout_constraintTop_toBottomOf="@+id/password_toggle" />
+        app:layout_constraintTop_toBottomOf="@+id/password_toggle"
+        app:layout_constraintVertical_bias="0.376" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/password_toggle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/username_field"
