[LS-021] implemented tests and UI part for sorting [KC, LB]

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -18,4 +18,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rvAccounts"
         app:showAsAction="ifRoom|collapseActionView" />
+
+    <item
+        android:id="@+id/sortfromAtoZ"
+        android:title="@string/sortfromAtoZ" />
+    <item
+        android:id="@+id/sortfromZtoA"
+        android:title="@string/sortfromZtoA" />
 </menu>
